--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,10 +1,7 @@
-name: Bug Report
+name: :bug: Bug Report
 description: File a bug report
 title: "[Bug]: "
 labels: ["bug", "triage"]
-#projects: []
-assignees:
-  - octocat
 body:
   - type: markdown
     attributes:
