--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -15,11 +15,7 @@ body:
       placeholder: Tell us what you want to know!
     validations:
       required: true
-  - type: checkboxes
-    id: terms
+  - type: markdown
     attributes:
       label: Code of Conduct
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
