--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -17,5 +17,4 @@ body:
       required: true
   - type: markdown
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      value: By submitting this issue, you agree to follow our [Code of Conduct](../../CODE_OF_CONDUCT.md)
